# StereoKit.Templates.Native

./: .gitignore  CMakeLists.txt  README.md  build_android.sh  install_android_deps.sh
android/: AndroidBuild.cmake  AndroidManifest.xml  android_main.cpp
android/resources/mipmap/: ic_launcher.xml
android/resources/values/: strings.xml
android/scripts/: install_android_deps.sh
src/: main.cpp
